--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="ratePerPeriod_text">Rate Per Period:</string>
     <string name="periods_text">Periods:</string>
     <string name="futureValue">Future Value</string>
-    <string name="not_calculated_string">Not Calculated Yet</string>
+    <string name="not_calculated_string">Not Calculated Yet!</string>
+    <string name="periodHint">Number of Periods. (Integer)</string>
+    <string name="rateHint">Rate  (Decimal)</string>
+    <string name="paymentHint">Payment per Period (Decimal)</string>
 </resources>
